--- a/style/home.css
+++ b/style/home.css
@@ -26,7 +26,8 @@ main{
 }
 
 main .container{
-    width: min(36.3rem 100%);
+    width: min(36.3rem, 100%);
+    resize: none;
 }
 
 main h2{
@@ -44,4 +45,27 @@ input{
 input, button, .button{
     width: 100%;
     margin-bottom: 1.8rem;
+}
+
+
+/* separator line */
+.separator{
+    display: flex;
+    align-items: center;
+    margin: 4rem 0;
+}
+
+.separator div:nth-child(1),
+.separator div:nth-child(3){
+    background: var(--grey-blue);
+    width: 100%;
+    height: 1px;
+}
+
+.separator div:nth-child(2){
+    color: var(--grey-blue);
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
