--- a/style/room.css
+++ b/style/room.css
@@ -1,3 +1,7 @@
+.content{
+    max-width: min(112rem, 90%);
+}
+
 #room header{
     width: 90%;
     display: flex;
@@ -27,4 +31,101 @@
 #room header .buttons .button:nth-child(2) img{
     width: 2rem;
     height: 2rem;
+}
+
+/* Question form */
+#question-form h2{
+    font-family: 'Poppins', sans-serif;
+    font-size: 2.8rem;
+    color: var(--black);
+    font-weight: 700;
+    line-height: 4.2rem;
+
+    margin-bottom: 2.4rem;
+    
+}
+
+#question-form form{
+    border: .2rem solid var(--grey-blue);
+    padding: 1.6rem;
+    border-radius: .8rem;
+
+    margin-bottom: 1.6rem;
+    
+
+}
+
+#question-form textarea{
+    resize: none;
+    background: none;
+    width: 100%;
+    outline: none;
+
+}
+
+#question-form form textarea::placeholder{
+    color: var(--grey-blue);
+}
+
+#question-form form footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+}
+
+#question-form form footer > div {
+    display: flex;
+    align-items: center;
+
+    color: var(--icons-details);
+    font-size: 1.4rem;
+}
+
+#question-form form footer > div img{
+    margin-right: 0.9rem;
+}
+
+#question-form form footer button{
+    height: auto;
+    padding: .8rem 2.4rem;
+    line-height: 2.4rem;
+}
+
+/* questions */
+
+.question-wrapper{
+    background: var(--light-blue);
+    margin-bottom: .8rem;
+    border-radius: .8rem;
+
+    padding: 2.4rem;
+}
+
+.question-wrapper .question-content{
+    display: flex;
+    align-items: center;
+}
+
+.question-wrapper .question-content p{
+    margin-left: 1.6rem;
+}
+
+.question-wrapper .actions {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.question-wrapper .actions > a {
+    display: flex;
+    align-items: center;
+}
+
+.question-wrapper .actions > a > img{
+    margin-right: .8rem;
+}
+
+.question-wrapper .actions > a + a{
+    margin-left: 2.4rem;
 }
