--- a/style/home.css
+++ b/style/home.css
@@ -16,6 +16,8 @@ header{
     grid-area: left;
     
     background: url('/assets/home-bg-img.svg') no-repeat top/contain;
+    
+    
 }
 
 main{
@@ -23,6 +25,7 @@ main{
 
     display: flex;
     align-items: center;
+    margin-top: -12rem;
 }
 
 main .container{
@@ -66,6 +69,6 @@ input, button, .button{
     color: var(--grey-blue);
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding: 0 1.35rem;
+    line-height: 0;
 }
