feat(server.js): initializing backend nodejs

--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -25,16 +25,16 @@
             <header>
                 
                 <a href="#">
-                    <img src="/assets/logo.svg" alt="MobileSaude.Q Logo"/>
+                    <img src="/images/logo.svg" alt="MobileSaude.Q Logo"/>
                 </a>
                 
                 <div class="buttons">
                     <div class="button outlined">
                         #323943
-                        <img src="/assets/copy-button.svg" alt="Copiar Numero Sala">
+                        <img src="/images/copy-button.svg" alt="Copiar Numero Sala">
                     </div>
                     <a href="#" class="button">
-                        <img src="/assets/users-white-button.svg" alt="Criar Sala">
+                        <img src="/images/users-white-button.svg" alt="Criar Sala">
                         Criar Sala    
                     </a>
                 </div>
@@ -49,7 +49,7 @@
 
                         <footer>
                             <div>
-                                <img src="/assets/lock.svg" alt="">
+                                <img src="/images/lock.svg" alt="">
                                 Esta pergunta é anônima
                             </div>
                             <button>Enviar</button>
@@ -64,7 +64,7 @@
                         <div class="question-wrapper">
                             <div class="question-content">
                                 <div class="user">
-                                    <img src="/assets/user.svg" alt="Avatar">
+                                    <img src="/images/user.svg" alt="Avatar">
                                 </div>
                                 <div class="question">
                                     <p>O que é o Mosia chat?</p>
@@ -73,12 +73,12 @@
                 
                             <div class="actions">
                                 <a href="#" class="check">
-                                    <img src="/assets/check.svg" alt="Marcar como lida">
+                                    <img src="/images/check.svg" alt="Marcar como lida">
                                     Marcar como lida
                                 </a>
 
                                 <a href="#" class="delete">
-                                    <img src="/assets/trash.svg" alt="Excluir">
+                                    <img src="/images/trash.svg" alt="Excluir">
                                     Excluir
                                 </a>
                             </div>
@@ -87,7 +87,7 @@
                         <div class="question-wrapper">
                             <div class="question-content">
                                 <div class="user">
-                                    <img src="/assets/user.svg" alt="Avatar">
+                                    <img src="/images/user.svg" alt="Avatar">
                                 </div>
                                 <div class="question">
                                     <p>Para que serve o Mosia Telecare?</p>
@@ -96,12 +96,12 @@
                 
                             <div class="actions">
                                 <a href="#" class="check">
-                                    <img src="/assets/check.svg" alt="Marcar como lida">
+                                    <img src="/images/check.svg" alt="Marcar como lida">
                                     Marcar como lida
                                 </a>
 
                                 <a href="#" class="delete">
-                                    <img src="/assets/trash.svg" alt="Excluir">
+                                    <img src="/images/trash.svg" alt="Excluir">
                                     Excluir
                                 </a>
                             </div>
@@ -110,7 +110,7 @@
                         <div class="question-wrapper">
                             <div class="question-content">
                                 <div class="user">
-                                    <img src="/assets/user.svg" alt="Avatar">
+                                    <img src="/images/user.svg" alt="Avatar">
                                 </div>
                                 <div class="question">
                                     <p>O que significa Memed?</p>
@@ -119,12 +119,12 @@
                 
                             <div class="actions">
                                 <a href="#" class="check">
-                                    <img src="/assets/check.svg" alt="Marcar como lida">
+                                    <img src="/images/check.svg" alt="Marcar como lida">
                                     Marcar como lida
                                 </a>
 
                                 <a href="#" class="delete">
-                                    <img src="/assets/trash.svg" alt="Excluir">
+                                    <img src="/images/trash.svg" alt="Excluir">
                                     Excluir
                                 </a>
                             </div>
@@ -133,7 +133,7 @@
                         <div class="question-wrapper read">
                             <div class="question-content">
                                 <div class="user">
-                                    <img src="/assets/user.svg" alt="Avatar">
+                                    <img src="/images/user.svg" alt="Avatar">
                                 </div>
                                 <div class="question">
                                     <p>Qual a diferença do Mosia chat para o Mosia telecare?</p>
@@ -142,7 +142,7 @@
                 
                             <div class="actions">
                                 <a href="#" class="delete">
-                                    <img src="/assets/trash.svg" alt="Excluir">
+                                    <img src="/images/trash.svg" alt="Excluir">
                                     Excluir
                                 </a>
                             </div>
