--- a/src/views/create-pass.ejs
+++ b/src/views/create-pass.ejs
@@ -20,7 +20,7 @@
     <body>
         <div id="home" class="content">
             <header>
-                <img src="/assets/logo.svg" alt="MobileSaude.Q Logo"/>
+                <img src="/images/logo.svg" alt="MobileSaude.Q Logo"/>
             </header>
 
             <div id="bg"></div>
@@ -33,7 +33,7 @@
                             <label class="sr-only" for="room-pass">Insira uma senha</label>
                             <input type="password" id="room-pass" placeholder="Insira uma senha">
                             <button>
-                                <img src="/assets/users-white-button.svg" alt="Criar Sala">
+                                <img src="/images/users-white-button.svg" alt="Criar Sala">
                                 Criar Sala
                             </button>
                         </form>
