--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -19,6 +19,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
         
+        <!-- SCRIPTS-->
+
+        <script src="scripts/main.js" defer type="module"></script>
+
     </head>
     <body>
         <div id="room" class="content">
@@ -165,7 +169,7 @@
                     <input type="password" id="password" name="password" placeholder="Digite sua senha de admin">
 
                     <div class="buttons">
-                        <div class="button grey">Cancelar</div>
+                        <div class="button grey cancel">Cancelar</div>
                         <button class="red">Sim, excluir</button>
                     </div>
                 </form>
