--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -33,8 +33,8 @@
                 </a>
                 
                 <div class="buttons">
-                    <div class="button outlined">
-                        #323943
+                    <div class="button outlined" id="room-id" data-id="323243">
+                        #323243
                         <img src="/images/copy-button.svg" alt="Copiar Numero Sala">
                     </div>
                     <a href="#" class="button">
@@ -76,12 +76,12 @@
                             </div>
                 
                             <div class="actions">
-                                <a href="#" class="check">
+                                <a href="#" class="check" data-id="2">
                                     <img src="/images/check.svg" alt="Marcar como lida">
                                     Marcar como lida
                                 </a>
 
-                                <a href="#" class="delete">
+                                <a href="#" class="delete" data-id="2">
                                     <img src="/images/trash.svg" alt="Excluir">
                                     Excluir
                                 </a>
@@ -99,12 +99,12 @@
                             </div>
                 
                             <div class="actions">
-                                <a href="#" class="check">
+                                <a href="#" class="check" data-id="3">
                                     <img src="/images/check.svg" alt="Marcar como lida">
                                     Marcar como lida
                                 </a>
 
-                                <a href="#" class="delete">
+                                <a href="#" class="delete" data-id="3">
                                     <img src="/images/trash.svg" alt="Excluir">
                                     Excluir
                                 </a>
@@ -122,12 +122,12 @@
                             </div>
                 
                             <div class="actions">
-                                <a href="#" class="check">
+                                <a href="#" class="check" data-id="4">
                                     <img src="/images/check.svg" alt="Marcar como lida">
                                     Marcar como lida
                                 </a>
 
-                                <a href="#" class="delete">
+                                <a href="#" class="delete" data-id="4">
                                     <img src="/images/trash.svg" alt="Excluir">
                                     Excluir
                                 </a>
@@ -145,7 +145,7 @@
                             </div>
                 
                             <div class="actions">
-                                <a href="#" class="delete">
+                                <a href="#" class="delete" data-id="1">
                                     <img src="/images/trash.svg" alt="Excluir">
                                     Excluir
                                 </a>
@@ -164,7 +164,7 @@
             <div class="modal">
                 <h2>Excluir pergunta</h2>
                 <p>Tem certeza que você deseja exluir esta pergunta?</p>
-                <form action="#">
+                <form action="#" method="POST">
                     <label class="sr-only" for-id="password">Digite sua senha admin</label>
                     <input type="password" id="password" name="password" placeholder="Digite sua senha de admin">
 
