--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -21,14 +21,14 @@
         
         <!-- SCRIPTS-->
 
-        <script src="scripts/main.js" defer type="module"></script>
+        <script src="/scripts/main.js" defer type="module"></script>
 
     </head>
     <body>
         <div id="room" class="content">
             <header>
                 
-                <a href="#">
+                <a href="/">
                     <img src="/images/logo.svg" alt="MobileSaude.Q Logo"/>
                 </a>
                 
