feat(finish): end project

--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -33,11 +33,11 @@
                 </a>
                 
                 <div class="buttons">
-                    <div class="button outlined" id="room-id" data-id="323243">
-                        #323243
+                    <div class="button outlined" id="room-id" data-id="<%= roomId %>">
+                        #<%= roomId %>
                         <img src="/images/copy-button.svg" alt="Copiar Numero Sala">
                     </div>
-                    <a href="#" class="button">
+                    <a href="/create-pass" class="button">
                         <img src="/images/users-white-button.svg" alt="Criar Sala">
                         Criar Sala    
                     </a>
@@ -47,7 +47,7 @@
             <main>
                 <section id="question-form">
                     <h2>Faça sua pergunta</h2>
-                    <form action="#">
+                    <form action="/question/create/<%= roomId %>" method="POST">
                         <label class="sr-only" for-id="question">O que voce quer perguntar?</label>
                         <textarea name="question" id="question" placeholder="O que voce quer perguntar?"></textarea>
 
@@ -65,93 +65,59 @@
                     <h2 class="sr-only">Perguntas dos clientes</h2>
                     <div class="questions">
 
-                        <div class="question-wrapper">
-                            <div class="question-content">
-                                <div class="user">
-                                    <img src="/images/user.svg" alt="Avatar">
-                                </div>
-                                <div class="question">
-                                    <p>O que é o Mosia chat?</p>
-                                </div>
-                            </div>
-                
-                            <div class="actions">
-                                <a href="#" class="check" data-id="2">
-                                    <img src="/images/check.svg" alt="Marcar como lida">
-                                    Marcar como lida
-                                </a>
+                        <% if(isNoQuestions){ %>
+                            
+                            <%- include('parts/no-question') %>
+                            
+                        <% } %>
 
-                                <a href="#" class="delete" data-id="2">
-                                    <img src="/images/trash.svg" alt="Excluir">
-                                    Excluir
-                                </a>
-                            </div>
-                        </div>   
-                        
-                        <div class="question-wrapper">
-                            <div class="question-content">
-                                <div class="user">
-                                    <img src="/images/user.svg" alt="Avatar">
+                        <% questions.forEach(question => { %>
+                            
+                            <div class="question-wrapper">
+                                <div class="question-content">
+                                    <div class="user">
+                                        <img src="/images/user.svg" alt="Avatar">
+                                    </div>
+                                    <div class="question">
+                                        <p><%= question.title %></p>
+                                    </div>
                                 </div>
-                                <div class="question">
-                                    <p>Para que serve o Mosia Telecare?</p>
+                    
+                                <div class="actions">
+                                    <a href="#" class="check" data-id="<%= question.id %>">
+                                        <img src="/images/check.svg" alt="Marcar como lida">
+                                        Marcar como lida
+                                    </a>
+    
+                                    <a href="#" class="delete" data-id="<%= question.id %>">
+                                        <img src="/images/trash.svg" alt="Excluir">
+                                        Excluir
+                                    </a>
                                 </div>
-                            </div>
-                
-                            <div class="actions">
-                                <a href="#" class="check" data-id="3">
-                                    <img src="/images/check.svg" alt="Marcar como lida">
-                                    Marcar como lida
-                                </a>
+                            </div>   
+                    
+                        <% }); %>
 
-                                <a href="#" class="delete" data-id="3">
-                                    <img src="/images/trash.svg" alt="Excluir">
-                                    Excluir
-                                </a>
-                            </div>
-                        </div> 
-
-                        <div class="question-wrapper">
-                            <div class="question-content">
-                                <div class="user">
-                                    <img src="/images/user.svg" alt="Avatar">
-                                </div>
-                                <div class="question">
-                                    <p>O que significa Memed?</p>
-                                </div>
-                            </div>
-                
-                            <div class="actions">
-                                <a href="#" class="check" data-id="4">
-                                    <img src="/images/check.svg" alt="Marcar como lida">
-                                    Marcar como lida
-                                </a>
-
-                                <a href="#" class="delete" data-id="4">
-                                    <img src="/images/trash.svg" alt="Excluir">
-                                    Excluir
-                                </a>
-                            </div>
-                        </div> 
-
+                        <% questionsRead.forEach(questionRead => { %>
                         <div class="question-wrapper read">
                             <div class="question-content">
                                 <div class="user">
                                     <img src="/images/user.svg" alt="Avatar">
                                 </div>
                                 <div class="question">
-                                    <p>Qual a diferença do Mosia chat para o Mosia telecare?</p>
+                                    <p><%= questionRead.title %></p>
                                 </div>
                             </div>
                 
                             <div class="actions">
-                                <a href="#" class="delete" data-id="1">
+                                <a href="#" class="delete" data-id="<%= questionRead.id %>">
                                     <img src="/images/trash.svg" alt="Excluir">
                                     Excluir
                                 </a>
                             </div>
                         </div> 
 
+                        <% }); %>
                     </div>
                 </section>
 
